# django-bird-colony

./: .gitignore  MANIFEST.in  README.md  README.rst  colony.R  pyproject.toml  requirements.txt  setup.cfg  setup.py  starter_kit.json
.github/workflows/: build_wheels.yml  publish-to-pypi.yml  test.yml
birds/: __init__.py  admin.py  api_views.py  apps.py  filters.py  forms.py  models.py  pedigree.py  serializers.py  tests.py  tools.py  triggers.py  urls.py  views.py
birds/fixtures/: bird_colony_sandbox.json  bird_colony_starter_kit.json
birds/management/commands/: migrate_measurements.py  update_life_history.py  update_pedigree.py
birds/migrations/: 0001_initial.py  0001_squashed_0009_auto_20161108_1647.py  0002_auto_20150626_1219.py  0002_auto_20161109_1215.py  0002_auto_20170623_1716.py  0002_auto_20180130_1706.py  0002_auto__chg_field_status_count.py  0003_auto_20161109_1215.py  0003_auto_20180322_1617.py  0003_auto__add_field_animal_created__chg_field_event_status__chg_field_even.py  0003_datacollection_datatype_recording.py  0004_auto_20161102_1742.py  0004_auto_20161109_2138.py  0004_auto_20180322_1729.py  0004_auto__add_age.py  0005_auto_20161107_1452.py  0005_auto_20190119_1603.py  0005_auto__add_field_animal_reserved_by.py  0006_auto_20161108_1548.py  0006_auto_20190121_2003.py  0006_auto_20190122_2306.py  0006_auto_20190125_1453.py  0007_auto_20161108_1623.py  0007_auto_20190205_1534.py  0008_auto_20161108_1637.py  0008_auto_20190703_1230.py  0009_auto_20161108_1647.py  0009_remove_age_max_days.py  0010_location_nest.py  0011_auto_20200110_1510.py  0012_auto_20200116_1141.py  0013_auto_20220330_1214.py  0014_auto_20220401_1217.py  0015_event_animal_status_idx.py  0016_event_animal_date_idx.py  0017_pairing_ended_gt_began.py  0018_alter_pairing_options_remove_pairing_ended_gt_began_and_more.py  0019_location_description.py  0020_measure_alter_age_options_alter_color_options_and_more.py  0021_alter_measurement_event_alter_sample_date.py  (+15 more)
birds/templates/: base_view.html
birds/templates/birds/: animal.html  animal_entry.html  animal_kinship.html  animal_list.html  animal_location_list.html  animal_location_summary.html  animal_table.html  band_entry.html  banding_entry.html  bird.html  bird_table.html  birds.html  breeding_check.html  breeding_check_confirm.html  breeding_report.html  breeding_stats.html  clutch_entry.html  descendents.html  event_entry.html  event_list.html  events.html  genealogy.html  index.html  location.html  location_list.html  measurement_list.html  nest_check.html  nest_check_confirm.html  nest_report.html  pairing.html  pairing_close.html  pairing_egg_entry.html  pairing_entry.html  pairing_event_entry.html  pairing_list.html  pairing_list_active.html  pairing_report.html  pairing_table.html  reservation_entry.html  sample.html  (+11 more)
birds/templates/birds/partials/: tag_list.html
birds/templatetags/: bird_tags.py  date_fmt.py  fullurl.py
birds/tests/: settings.py  test_api_views.py  test_forms.py  test_models.py  test_pedigree.py  test_serializers.py  test_tools.py  test_views.py  urls.py
scripts/: bulk_import.py
