[pep8]
ignore=E221,E501,E701

[metadata]
name = django-bird-colony
version = attr: birds.__version__
description = A simple Django app for managing a bird breeding colony
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
author = C Daniel Meliza
author_email = dan@meliza.org
maintainer = C Daniel Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/django-bird-colony

[options]
zip_safe = false
packages = birds
include_package_data = true
python_requires = >= 3.8
setup_requires =
    setuptools
install_requires =
    djangorestframework < 2.15
    djangorestframework-link-header-pagination
    django-filter
    django-fullurl
test_suite = birds.tests

[options.packages.find]
exclude = *test*
